--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Search Console -->
+  <meta name="google-site-verification" content="F2sRxTey5yJIWtbf_nCSOvM6d0N1djVUzWBv3NZDY6I" />
+
   <link rel="stylesheet" href="./style.css">
-  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="icon" href="design_img/logo.png">
 
-  <!-- *NEW* GOOGLE ANALYTICS TAG (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YOUR_MEASUREMENT_ID_HERE"></script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8225512758"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
-    gtag('config', 'G-YOUR_MEASUREMENT_ID_HERE');
+    gtag('config', 'G-8225512758');
   </script>
+
 
   <title>Cafe +met | home</title>
 </head>
