--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8225512758"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HFEDMTXMG5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-8225512758');
+    gtag('config', 'G-HFEDMTXMG5');
   </script>
 
 
