--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 
   <!-- Google Search Console -->
   <meta name="google-site-verification" content="F2sRxTey5yJIWtbf_nCSOvM6d0N1djVUzWBv3NZDY6I" />
-
+  <meta name="google-site-verification" content="F2sRxTey5yJIWtbf_nCSOvM6d0N1djVUzWBv3NZDY6I" />
+  
   <link rel="stylesheet" href="./style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="icon" href="design_img/logo.png">
@@ -21,7 +23,6 @@
     gtag('config', 'G-HFEDMTXMG5');
   </script>
 
-
   <title>Cafe +met | home</title>
 </head>
 <body>
@@ -30,8 +31,9 @@
       <nav id="navbar">
         <div class="container nx-flex">
           <h1>
-            <img src="design_img/logo.png" alt="logo">
-          </h1>     
+            <img src="design_img/logo.png" alt="Cafe in Moorabbin - Best Local Cafe for Breakfast">
+          </h1>    
+            <input type="checkbox" id="navToggle">
             <label for="navToggle" class="btn-burger">
               <span class="icon"></span>            
             </label>        
@@ -46,29 +48,31 @@
 
       <div class="sp-menu" id="navbar2">
         <div class="container nx-flex">
-          <h1>
+          <h2>
             <img src="design_img/logo.png" alt="logo">
-          </h1> 
-  
-        <input type="checkbox" id="sp-menu__check">
-        <label for="sp-menu__check" class="sp-menu__box">
-          <span></span>
-        </label>
-        <div class="sp-menu__content">
-          <ul class="sp-menu__list">
-            <li class="sp-menu__item">
-              <a class="sp-menu__link current" href="./index.html">Home</a>
-            </li>
-            <li class="sp-menu__item">
-              <a class="sp-menu__link" href="./coffee.html">Coffee</a>
-            </li>
-            <li class="sp-menu__item">
-              <a class="sp-menu__link" href="./about.html">About</a>
-            </li>
-            <li class="sp-menu__item">
-              <a class="sp-menu__link" href="./contact.html">Contact</a>
-            </li>
-          </ul>
+          </h2> 
+          
+          <input type="checkbox" id="sp-menu__check">
+          <label for="sp-menu__check" class="sp-menu__box">
+            <span>Cafe +met</span>
+          </label>
+
+          <div class="sp-menu__content">
+            <ul class="sp-menu__list">
+              <li class="sp-menu__item">
+                <a class="sp-menu__link current" href="./index.html">Home</a>
+              </li>
+              <li class="sp-menu__item">
+                <a class="sp-menu__link" href="./coffee.html">Coffee</a>
+              </li>
+              <li class="sp-menu__item">
+                <a class="sp-menu__link" href="./about.html">About</a>
+              </li>
+              <li class="sp-menu__item">
+                <a class="sp-menu__link" href="./contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -89,19 +93,19 @@
           <img src="./design_img/coffee1.jpg" class="d-block w-100" alt="Burger Lab Beer and Burger Bar">
           <!-- 6A. NEW HERO - SEO Heading Captions for Carousel: https://getbootstrap.com/docs/5.3/components/carousel/#captions -->
           <div class="carousel-caption d-none d-md-block">
-            <h1>Burger Labs Burgers</h1>
-            <p>Dine in or take away, to sample our Classic, Angus or Big and Tasty Burger options!</p>
+            <h2>Best Local Café in Melbourne for Breakfast!</h2>
+            <p>Our cozy spot offers the perfect ambiance for enjoying a delicious breakfast.</p>
           </div>
         </div>
 
         <!-- Carousel Item 2 -->
         <div class="carousel-item">
           <!-- 5. SEO Image Alt Descriptions -->
-          <img src="./design_img/coffee2.jpg" class="d-block w-100" alt="Burger Lab Restaurant Malvern">
+          <img src="./design_img/people_socializing.jpg" class="d-block w-100" alt="best cafe for meeting new people in Moorabbin">
           <!-- 6A. NEW HERO - SEO Heading Captions for Carousel -->
           <div class="carousel-caption d-none d-md-block">
-            <h1>Opening Burger Labs Near You!</h1>
-            <p>New locations available in <strong>Malvern</strong> & <strong>Moorabbin</strong>!</p>
+            <h2>Opening Local Cafe Near You!</h2>
+            <p>Our local cafe in Moorabbin is a cozy spot for great encounters.</p>
           </div>
         </div>
 
@@ -113,14 +117,14 @@
         <img src="./design_img/beans1.jpg" alt="Café beans">
       </div>
       <div class="content1">
-        <h2>Welcome to Local Haven Café!</h2>
-        <p>Nestled in the heart of our charming town, Local Haven Café is the perfect spot to unwind, connect, and enjoy a delightful cup of coffee. Our cozy café, with its warm ambiance and friendly staff, invites you to take a break from the hustle and bustle of daily life.</p>
+        <h2>Welcome to Café +met!</h2>
+        <p>Welcome to our café, the best local cafe in Melbourne for breakfast! Our cozy café in Moorabbin is perfect for great encounters, whether you're meeting friends or making new ones. We pride ourselves on being a friendly, local café that serves delicious breakfast options to start your day right.</p>
       </div>
     </div>
 
     <div class="home_container">
       <div class="content">
-        <h2>Welcome to Local Haven Café!</h2>
+        <h2>Wthe Best Local Café in Melbourne for Breakfast!</h2>
         <p>Nestled in the heart of our charming town, Local Haven Café is the perfect spot to unwind, connect, and enjoy a delightful cup of coffee. Our cozy café, with its warm ambiance and friendly staff, invites you to take a break from the hustle and bustle of daily life.</p>
         <button class="btn">
           
